@@ -334,3 +334,7 @@ Jeroen Vermeulen
 Adam Mottershead
     - Suggested the ability to disable psad email alerts about auto-blocking
       events.
+
+Richard B\351neyt
+    - Suggested syslog-ng enhancement to allow a custom source path for
+      /proc/kmsg to be defined for the psadfifo file.
